// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CallSidebar > Snapshot Testing > should match snapshot when in focus mode 1`] = `
<div
  data-testid="animate-presence"
>
  <div
    class="h-full bg-[#17181A] overflow-hidden border-l-[0.5px] border-l-[#5A5F6A] z-20"
    data-animate="{\\"width\\":0}"
    data-exit="{\\"width\\":0}"
    data-initial="{\\"width\\":0}"
    data-testid="motion-div"
    data-transition="{\\"duration\\":0.3,\\"ease\\":\\"easeInOut\\"}"
  >
    <div
      class="h-14 px-4 flex justify-between items-center"
    >
      <div />
      <div
        class="cursor-pointer"
        data-testid="close-icon"
      >
        Close Icon
      </div>
    </div>
    <div
      class="px-6 py-4 mx-4 mb-4 border border-[#0473F2]  font-['IBM_Plex_Serif'] rounded-lg bg-[#8CD3FF26]"
    >
      <div
        class="text-base font-medium text-[#0473F2] "
      >
        Current Stage:
        <span
          class="text-[#fff] text-base"
        >
           Active Listening
        </span>
      </div>
    </div>
    <div
      class="mx-4 mb-4"
    >
      <div
        class="border border-gray-200 text-[#fff] rounded-lg p-4 mb-2"
      >
        <div
          class="font-['IBM_Plex_Serif']"
          data-testid="custom-markdown"
        >
          This is a test nudge content
        </div>
        <div
          data-sx="{\\"backgroundColor\\":\\"rgba(255, 255, 255, 0.12)\\"}"
          data-testid="divider"
        />
        <div
          class="flex text-sm items-center gap-2"
        >
          <span>
            Is this helpful?
          </span>
          <button
            class="rounded-lg transition-colors"
          >
            <div
              class="w-5 h-5"
              data-testid="thumb-down-filled-icon"
            >
              Thumb Down Filled Icon
            </div>
          </button>
          <button
            class="p-2 rounded-lg transition-colors"
          >
            <div
              class="w-5 h-5"
              data-testid="thumb-up-icon"
            >
              Thumb Up Icon
            </div>
          </button>
        </div>
      </div>
    </div>
    <div
      class="mx-4 md:mx-2 lg:mx-[20px] mb-[100px] overflow-x-hidden"
    >
      <div
        data-full-width="true"
        data-is-in-sidebar="true"
        data-show-header="false"
        data-testid="search-resources"
      >
        Search Resources Component
      </div>
    </div>
  </div>
</div>
`;

exports[`CallSidebar > Snapshot Testing > should match snapshot when sidebar is hidden 1`] = `
<div
  data-testid="animate-presence"
/>
`;

exports[`CallSidebar > Snapshot Testing > should match snapshot when sidebar is visible 1`] = `
<div
  data-testid="animate-presence"
>
  <div
    class="h-full bg-[#17181A] overflow-hidden border-l-[0.5px] border-l-[#5A5F6A] z-20"
    data-animate="{\\"width\\":\\"70%\\"}"
    data-exit="{\\"width\\":0}"
    data-initial="{\\"width\\":0}"
    data-testid="motion-div"
    data-transition="{\\"duration\\":0.3,\\"ease\\":\\"easeInOut\\"}"
  >
    <div
      class="h-14 px-4 flex justify-between items-center"
    >
      <div />
      <div
        class="cursor-pointer"
        data-testid="close-icon"
      >
        Close Icon
      </div>
    </div>
    <div
      class="px-6 py-4 mx-4 mb-4 border border-[#0473F2]  font-['IBM_Plex_Serif'] rounded-lg bg-[#8CD3FF26]"
    >
      <div
        class="text-base font-medium text-[#0473F2] "
      >
        Current Stage:
        <span
          class="text-[#fff] text-base"
        >
           Active Listening
        </span>
      </div>
    </div>
    <div
      class="mx-4 mb-4"
    >
      <div
        class="border border-gray-200 text-[#fff] rounded-lg p-4 mb-2"
      >
        <div
          class="font-['IBM_Plex_Serif']"
          data-testid="custom-markdown"
        >
          This is a test nudge content
        </div>
        <div
          data-sx="{\\"backgroundColor\\":\\"rgba(255, 255, 255, 0.12)\\"}"
          data-testid="divider"
        />
        <div
          class="flex text-sm items-center gap-2"
        >
          <span>
            Is this helpful?
          </span>
          <button
            class="rounded-lg transition-colors"
          >
            <div
              class="w-5 h-5"
              data-testid="thumb-down-filled-icon"
            >
              Thumb Down Filled Icon
            </div>
          </button>
          <button
            class="p-2 rounded-lg transition-colors"
          >
            <div
              class="w-5 h-5"
              data-testid="thumb-up-icon"
            >
              Thumb Up Icon
            </div>
          </button>
        </div>
      </div>
    </div>
    <div
      class="mx-4 md:mx-2 lg:mx-[20px] mb-[100px] overflow-x-hidden"
    >
      <div
        data-full-width="true"
        data-is-in-sidebar="true"
        data-show-header="false"
        data-testid="search-resources"
      >
        Search Resources Component
      </div>
    </div>
  </div>
</div>
`;

exports[`CallSidebar > Snapshot Testing > should match snapshot with nudges 1`] = `
<div
  data-testid="animate-presence"
>
  <div
    class="h-full bg-[#17181A] overflow-hidden border-l-[0.5px] border-l-[#5A5F6A] z-20"
    data-animate="{\\"width\\":\\"70%\\"}"
    data-exit="{\\"width\\":0}"
    data-initial="{\\"width\\":0}"
    data-testid="motion-div"
    data-transition="{\\"duration\\":0.3,\\"ease\\":\\"easeInOut\\"}"
  >
    <div
      class="h-14 px-4 flex justify-between items-center"
    >
      <div />
      <div
        class="cursor-pointer"
        data-testid="close-icon"
      >
        Close Icon
      </div>
    </div>
    <div
      class="px-6 py-4 mx-4 mb-4 border border-[#0473F2]  font-['IBM_Plex_Serif'] rounded-lg bg-[#8CD3FF26]"
    >
      <div
        class="text-base font-medium text-[#0473F2] "
      >
        Current Stage:
        <span
          class="text-[#fff] text-base"
        >
           Active Listening
        </span>
      </div>
    </div>
    <div
      class="mx-4 mb-4"
    >
      <div
        class="border border-gray-200 text-[#fff] rounded-lg p-4 mb-2"
      >
        <div
          class="font-['IBM_Plex_Serif']"
          data-testid="custom-markdown"
        >
          This is a test nudge content
        </div>
        <div
          data-sx="{\\"backgroundColor\\":\\"rgba(255, 255, 255, 0.12)\\"}"
          data-testid="divider"
        />
        <div
          class="flex text-sm items-center gap-2"
        >
          <span>
            Is this helpful?
          </span>
          <button
            class="rounded-lg transition-colors"
          >
            <div
              class="w-5 h-5"
              data-testid="thumb-down-filled-icon"
            >
              Thumb Down Filled Icon
            </div>
          </button>
          <button
            class="p-2 rounded-lg transition-colors"
          >
            <div
              class="w-5 h-5"
              data-testid="thumb-up-icon"
            >
              Thumb Up Icon
            </div>
          </button>
        </div>
      </div>
    </div>
    <div
      class="mx-4 md:mx-2 lg:mx-[20px] mb-[100px] overflow-x-hidden"
    >
      <div
        data-full-width="true"
        data-is-in-sidebar="true"
        data-show-header="false"
        data-testid="search-resources"
      >
        Search Resources Component
      </div>
    </div>
  </div>
</div>
`;

exports[`CallSidebar > Snapshot Testing > should match snapshot with stage 1`] = `
<div
  data-testid="animate-presence"
>
  <div
    class="h-full bg-[#17181A] overflow-hidden border-l-[0.5px] border-l-[#5A5F6A] z-20"
    data-animate="{\\"width\\":\\"70%\\"}"
    data-exit="{\\"width\\":0}"
    data-initial="{\\"width\\":0}"
    data-testid="motion-div"
    data-transition="{\\"duration\\":0.3,\\"ease\\":\\"easeInOut\\"}"
  >
    <div
      class="h-14 px-4 flex justify-between items-center"
    >
      <div />
      <div
        class="cursor-pointer"
        data-testid="close-icon"
      >
        Close Icon
      </div>
    </div>
    <div
      class="px-6 py-4 mx-4 mb-4 border border-[#0473F2]  font-['IBM_Plex_Serif'] rounded-lg bg-[#8CD3FF26]"
    >
      <div
        class="text-base font-medium text-[#0473F2] "
      >
        Current Stage:
        <span
          class="text-[#fff] text-base"
        >
           Active Listening
        </span>
      </div>
    </div>
    <div
      class="mx-4 mb-4"
    >
      <div
        class="border border-gray-200 text-[#fff] rounded-lg p-4 mb-2"
      >
        <div
          class="font-['IBM_Plex_Serif']"
          data-testid="custom-markdown"
        >
          This is a test nudge content
        </div>
        <div
          data-sx="{\\"backgroundColor\\":\\"rgba(255, 255, 255, 0.12)\\"}"
          data-testid="divider"
        />
        <div
          class="flex text-sm items-center gap-2"
        >
          <span>
            Is this helpful?
          </span>
          <button
            class="rounded-lg transition-colors"
          >
            <div
              class="w-5 h-5"
              data-testid="thumb-down-filled-icon"
            >
              Thumb Down Filled Icon
            </div>
          </button>
          <button
            class="p-2 rounded-lg transition-colors"
          >
            <div
              class="w-5 h-5"
              data-testid="thumb-up-icon"
            >
              Thumb Up Icon
            </div>
          </button>
        </div>
      </div>
    </div>
    <div
      class="mx-4 md:mx-2 lg:mx-[20px] mb-[100px] overflow-x-hidden"
    >
      <div
        data-full-width="true"
        data-is-in-sidebar="true"
        data-show-header="false"
        data-testid="search-resources"
      >
        Search Resources Component
      </div>
    </div>
  </div>
</div>
`;
